--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.14",
+    "tailwind-scrollbar": "^3.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
