--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:HRS_Frontend": "node dist/hrs-frontend/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -20,12 +19,13 @@
     "@angular/material": "^18.2.11",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@angular/ssr": "^18.2.2",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/swiper": "^6.0.0",
     "express": "^4.18.2",
+    "flowbite": "^2.5.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14",
     "tailwind-scrollbar": "^3.1.0",
     "tslib": "^2.3.0",
@@ -35,17 +35,13 @@
     "@angular-devkit/build-angular": "^18.2.2",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.5.2"
   }
