--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/swiper": "^6.0.0",
     "express": "^4.18.2",
     "flowbite": "^2.5.2",
+    "lzutf8": "^0.6.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14",
