--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/swiper": "^6.0.0",
+    "chart.js": "^4.4.6",
     "express": "^4.18.2",
     "flowbite": "^2.5.2",
     "lzutf8": "^0.6.3",
